--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       </div>
       <ul id="todolist"></ul>
     </div>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
